--- a/Excel_Toolkit.css
+++ b/Excel_Toolkit.css
@@ -66,7 +66,7 @@ html {
     overflow: hidden;
 
     &>.一级列表 {
-      min-width: 50px;
+      min-width: 80px;
       background-color: #2d7d4f;
       color: #f0f0f0;
 
@@ -76,6 +76,7 @@ html {
         cursor: pointer;
         font-size: 14px;
         transition: background-color 0.2s;
+        font-weight: bold;
 
         &:hover {
           background-color: #3a8c56;
@@ -83,7 +84,6 @@ html {
 
         &.激活 {
           background-color: #217346;
-          font-weight: bold;
         }
       }
     }
@@ -129,6 +129,18 @@ html {
   flex: 8;
   padding: 20px;
   border-left: 1px solid #e0e0e0;
+
+  ol {
+    padding-left: 20px;
+  }
+
+  h2 {
+    padding-top: 15px;
+  }
+
+  h3 {
+    padding-top: 10px;
+  }
 
   table {
     border-collapse: collapse;
